--- a/global.css
+++ b/global.css
@@ -79,7 +79,11 @@
 }
 
 .jumbotron img {
- margin-right: 10%;
+ margin-right: 7%;
+}
+
+.jumbotron p {
+  margin-right: 55%;
 }
 
 .container-fluid {
@@ -97,4 +101,10 @@
 
 .container-fluid h3 {
   margin-bottom: 5%;
+}
+
+.img {
+  width: 50%;
+  padding-bottom: 5%;
+  margin: auto;
 }
